--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         #my-name {
             font-family: "Londrina Outline", sans-serif;
@@ -26,17 +27,18 @@
             <li class="hover-animation"><a href="">contact</a></li>
         </ul>
     </header>
-    <!-- banner -->
+    <!-- home -->
     <div id="introuction" class="flex flex-col justify-center items-center p-3 h-[90vh] bg-[#070F2B]">
-        <div class="flex justify-around items-center flex-row-reverse w-9/12 text-slate-100 absolute z-10">
+        <div class="flex justify-around items-center flex-row-reverse w-9/12 text-slate-100 absolute z-10" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="2000">
             <div class="flex flex-col">
                 <h2 class="text-center items-center w-max h-max text-6xl">Hello, Guyss!</h2>
-                <h3 id="my-name" class="text-center items-center w-max h-max text-[2.5rem] mt-2">Im, Audia Naila Safa</h3>
-                <button class="max-w-max p-2 mt-5 border-solid border-[1px] border-slate-100 rounded-md hover-animation hover:border-none">Download My CV</button>
+                <h3 id="my-name" class="text-center items-center w-max h-max text-[2.5rem] mt-2"></h3>
+                <p>i have experince in software development more than 3 years with spring framework</p>
+                <button class="max-w-max p-2 mt-5 border-solid border-[1px] border-slate-100 rounded-md hover:text-slate-800 hover:bg-slate-100">Download My CV</button>
                 <div class="social-media flex justify-start mt-3">
-                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="60" height="60" viewBox="0 0 48 48"><path fill="#f55376" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20 c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20 C42.014,38.383,38.417,41.986,34.017,41.99z"></path><path fill="#fac8d5" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5 s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"></path><circle cx="31.5" cy="16.5" r="1.5" fill="#fac8d5"></circle><path fill="#fac8d5" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12 C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18 z"></path></svg></a>
-                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="60" height="60" viewBox="0 0 48 48"><path fill="#3dd9eb" d="M24,4C12.954,4,4,12.954,4,24s8.954,20,20,20s20-8.954,20-20S35.046,4,24,4z"></path><path fill="#c2ffff" d="M21.009,20.546v3.498l-0.001,5.258v14.475C21.984,43.924,22.983,44,24,44 c0.918,0,1.822-0.062,2.707-0.182V21.169c0-2.184,0.714-4.121,2.757-4.121h3.283V12.46c-0.577-0.078-1.797-0.248-4.102-0.248 C23.831,12.212,21.009,14.754,21.009,20.546z"></path><polygon fill="#c2ffff" points="32,30 16,30 16,24 33,24"></polygon><polygon fill="#fff" points="26.707,30 26.707,24 21.009,24 21.009,24.044 21.008,29.302 21.008,30"></polygon></svg></a>
-                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="60" height="60" viewBox="0 0 48 48"><path fill="#2100c4" d="M24,4C12.954,4,4,12.954,4,24c0,8.887,5.801,16.411,13.82,19.016h12.36 C38.199,40.411,44,32.887,44,24C44,12.954,35.046,4,24,4z"></path><path fill="#ddbaff" d="M37,23.5c0-2.897-0.875-4.966-2.355-6.424C35.591,15.394,34.339,12,34.339,12 c-2.5,0.5-4.367,1.5-5.609,2.376C27.262,14.115,25.671,14,24,14c-1.71,0-3.339,0.118-4.834,0.393 c-1.242-0.879-3.115-1.889-5.632-2.393c0,0-1.284,3.492-0.255,5.146C11.843,18.6,11,20.651,11,23.5 c0,6.122,3.879,8.578,9.209,9.274C19.466,33.647,19,34.764,19,36l0,0.305c-0.163,0.045-0.332,0.084-0.514,0.108 c-1.107,0.143-2.271,0-2.833-0.333c-0.562-0.333-1.229-1.083-1.729-1.813c-0.422-0.616-1.263-2.032-3.416-1.979 c-0.376-0.01-0.548,0.343-0.5,0.563c0.043,0.194,0.213,0.5,0.896,0.75c0.685,0.251,1.063,0.854,1.438,1.458 c0.418,0.674,0.417,2.468,2.562,3.416c1.53,0.677,2.988,0.594,4.097,0.327l0.001,3.199c0,0.639-0.585,1.125-1.191,1.013 C19.755,43.668,21.833,44,24,44c2.166,0,4.243-0.332,6.19-0.984C29.584,43.127,29,42.641,29,42.002L29,36 c0-1.236-0.466-2.353-1.209-3.226C33.121,32.078,37,29.622,37,23.5z"></path><path fill="#ddbaff" d="M15,18l3.838-1.279c1.01-0.337,1.231-1.684,0.365-2.302l-0.037-0.026 c-2.399,0.44-4.445,1.291-5.888,2.753C13.596,17.658,14.129,18,15,18z"></path><path fill="#ddbaff" d="M28.693,14.402c-0.878,0.623-0.655,1.987,0.366,2.327L32.872,18c0.913,0,1.461-0.37,1.773-0.924 c-1.46-1.438-3.513-2.274-5.915-2.701C28.717,14.384,28.705,14.393,28.693,14.402z"></path><path fill="#ddbaff" d="M24,31c-1.525,0-2.874,0.697-3.791,1.774C21.409,32.931,22.681,33,24,33s2.591-0.069,3.791-0.226 C26.874,31.697,25.525,31,24,31z"></path></svg></a>
+                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48"><path fill="#f55376" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20 c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20 C42.014,38.383,38.417,41.986,34.017,41.99z"></path><path fill="#fac8d5" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5 s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"></path><circle cx="31.5" cy="16.5" r="1.5" fill="#fac8d5"></circle><path fill="#fac8d5" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12 C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18 z"></path></svg></a>
+                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48"><path fill="#3dd9eb" d="M24,4C12.954,4,4,12.954,4,24s8.954,20,20,20s20-8.954,20-20S35.046,4,24,4z"></path><path fill="#c2ffff" d="M21.009,20.546v3.498l-0.001,5.258v14.475C21.984,43.924,22.983,44,24,44 c0.918,0,1.822-0.062,2.707-0.182V21.169c0-2.184,0.714-4.121,2.757-4.121h3.283V12.46c-0.577-0.078-1.797-0.248-4.102-0.248 C23.831,12.212,21.009,14.754,21.009,20.546z"></path><polygon fill="#c2ffff" points="32,30 16,30 16,24 33,24"></polygon><polygon fill="#fff" points="26.707,30 26.707,24 21.009,24 21.009,24.044 21.008,29.302 21.008,30"></polygon></svg></a>
+                    <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48"><path fill="#2100c4" d="M24,4C12.954,4,4,12.954,4,24c0,8.887,5.801,16.411,13.82,19.016h12.36 C38.199,40.411,44,32.887,44,24C44,12.954,35.046,4,24,4z"></path><path fill="#ddbaff" d="M37,23.5c0-2.897-0.875-4.966-2.355-6.424C35.591,15.394,34.339,12,34.339,12 c-2.5,0.5-4.367,1.5-5.609,2.376C27.262,14.115,25.671,14,24,14c-1.71,0-3.339,0.118-4.834,0.393 c-1.242-0.879-3.115-1.889-5.632-2.393c0,0-1.284,3.492-0.255,5.146C11.843,18.6,11,20.651,11,23.5 c0,6.122,3.879,8.578,9.209,9.274C19.466,33.647,19,34.764,19,36l0,0.305c-0.163,0.045-0.332,0.084-0.514,0.108 c-1.107,0.143-2.271,0-2.833-0.333c-0.562-0.333-1.229-1.083-1.729-1.813c-0.422-0.616-1.263-2.032-3.416-1.979 c-0.376-0.01-0.548,0.343-0.5,0.563c0.043,0.194,0.213,0.5,0.896,0.75c0.685,0.251,1.063,0.854,1.438,1.458 c0.418,0.674,0.417,2.468,2.562,3.416c1.53,0.677,2.988,0.594,4.097,0.327l0.001,3.199c0,0.639-0.585,1.125-1.191,1.013 C19.755,43.668,21.833,44,24,44c2.166,0,4.243-0.332,6.19-0.984C29.584,43.127,29,42.641,29,42.002L29,36 c0-1.236-0.466-2.353-1.209-3.226C33.121,32.078,37,29.622,37,23.5z"></path><path fill="#ddbaff" d="M15,18l3.838-1.279c1.01-0.337,1.231-1.684,0.365-2.302l-0.037-0.026 c-2.399,0.44-4.445,1.291-5.888,2.753C13.596,17.658,14.129,18,15,18z"></path><path fill="#ddbaff" d="M28.693,14.402c-0.878,0.623-0.655,1.987,0.366,2.327L32.872,18c0.913,0,1.461-0.37,1.773-0.924 c-1.46-1.438-3.513-2.274-5.915-2.701C28.717,14.384,28.705,14.393,28.693,14.402z"></path><path fill="#ddbaff" d="M24,31c-1.525,0-2.874,0.697-3.791,1.774C21.409,32.931,22.681,33,24,33s2.591-0.069,3.791-0.226 C26.874,31.697,25.525,31,24,31z"></path></svg></a>
                 </div>
             </div>
             <div class="circle bg-[#e9e9ee] w-80 h-80 flex justify-center items-center rounded-full">
@@ -46,17 +48,47 @@
             </div>
         </div>
     </div>
-    <div class="h-[90vh] w-[30%] bg-[#535C91] absolute top-[4.5rem]"></div>
+    <div class="h-[90vh] w-[26%] bg-[#535C91] absolute top-[4.5rem]" data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="2000"></div>
 
     <!-- about -->
 
-    <div class="about-me items-center flex justify-center mt-4">
-        <div class="card border-solid border-2 border-slate-400 shadow-md rounded-2xl w-6/12 p-3">
+    <div class="about-me items-center flex justify-center mt-4 mb-4">
+        <div class="card border-solid border-[1px] border-slate-400 shadow-md rounded-2xl w-[60%] p-3">
             <h1 class="text-5xl mb-3">About me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab molestiae dignissimos neque blanditiis! Eaque, explicabo deserunt voluptas unde cupiditate, ducimus magni assumenda enim dolores sunt dicta! Accusamus saepe dolores veniam, quos minima esse eos quidem recusandae vitae commodi sunt tenetur cumque mollitia unde nemo illum dicta? Voluptatum corporis voluptate illum et odio dolore minima perferendis ex incidunt a, expedita, velit at. Reiciendis illo repellat tempore corrupti culpa deleniti assumenda vitae, tenetur, earum eaque repudiandae veritatis ducimus fugit ab maxime accusantium fugiat totam inventore aliquid, consectetur facilis. Natus quam iure temporibus perferendis, debitis ullam rerum itaque ipsam eum explicabo, atque dolorum?</p>
-        </div>
 
+            <div class="education">
+                <div class="flex items-center">
+                    <div class="w-3 h-3 bg-slate-500 rounded-full mr-2"></div>
+                    <h4 class="text-2xl">Education</h4>
+                </div>
+                <div class="conten flex">
+                    <div class="h-[13rem] w-5 bg-slate-500 mr-2"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab molestiae dignissimos neque blanditiis! Eaque, explicabo deserunt voluptas unde cupiditate, ducimus magni assumenda enim dolores sunt dicta! Accusamus saepe dolores veniam, quos minima esse eos quidem recusandae vitae commodi sunt tenetur cumque mollitia unde nemo illum dicta? Voluptatum corporis voluptate illum et odio dolore minima perferendis ex incidunt a, expedita, velit at. Reiciendis illo repellat tempore corrupti culpa deleniti assumenda vitae, tenetur, earum eaque repudiandae veritatis ducimus fugit ab maxime accusantium fugiat totam inventore aliquid, consectetur facilis. Natus quam iure temporibus perferendis, debitis ullam rerum itaque ipsam eum explicabo, atque dolorum?</p>
+                </div>
+            </div>
+            
+            <div class="hobbies">
+                <div class="flex items-center">
+                    <div class="w-3 h-3 bg-slate-500 rounded-full mr-2"></div>
+                    <h4 class="text-2xl">Hobbies</h4>
+                </div>
+                <div class="conten flex">
+                    <div class="h-[13rem] w-5 bg-slate-500 mr-2"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab molestiae dignissimos neque blanditiis! Eaque, explicabo deserunt voluptas unde cupiditate, ducimus magni assumenda enim dolores sunt dicta! Accusamus saepe dolores veniam, quos minima esse eos quidem recusandae vitae commodi sunt tenetur cumque mollitia unde nemo illum dicta? Voluptatum corporis voluptate illum et odio dolore minima perferendis ex incidunt a, expedita, velit at. Reiciendis illo repellat tempore corrupti culpa deleniti assumenda vitae, tenetur, earum eaque repudiandae veritatis ducimus fugit ab maxime accusantium fugiat totam inventore aliquid, consectetur facilis. Natus quam iure temporibus perferendis, debitis ullam rerum itaque ipsam eum explicabo, atque dolorum?</p>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <!-- Experinece -->
+    <div class="experience h-[100vh] bg-[#1B1A55]">
+        <div class="card">
+            <h1>title</h1>
+
+        </div>
+    </div>
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://unpkg.com/typeit@8.8.3/dist/index.umd.js"></script>
+<script src="../js/script.js"></script>
 </html>
