--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,10 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
         #my-name {
             font-family: "Londrina Outline", sans-serif;
             font-weight: 530;
+            font-style: normal;
+        }
+
+        #hello {
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
             font-style: normal;
         }
     </style>
@@ -21,19 +31,19 @@
     <header class="flex justify-evenly backdrop-blur-sm bg-[#1B1A55] p-5">
         <a href="index.html" class="text-slate-100 text-center text-2xl hover:text-slate-200 font-bold">Abdillah Alli</a>
         <ul class="text-slate-100 flex justify-around w-[30%]">
-            <li class="hover-animation"><a href="">home</a></li>
-            <li class="hover-animation"><a href="">about</a></li>
-            <li class="hover-animation"><a href="">experience</a></li>
-            <li class="hover-animation"><a href="">contact</a></li>
+            <li class="hover-animation"><a href="">Home</a></li>
+            <li class="hover-animation"><a href="">About</a></li>
+            <li class="hover-animation"><a href="">Experience</a></li>
+            <li class="hover-animation"><a href="">Contact</a></li>
         </ul>
     </header>
     <!-- home -->
     <div id="introuction" class="flex flex-col justify-center items-center p-3 h-[90vh] bg-[#070F2B]">
         <div class="flex justify-around items-center flex-row-reverse w-9/12 text-slate-100 absolute z-10" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="2000">
             <div class="flex flex-col">
-                <h2 class="text-center items-center w-max h-max text-6xl">Hello, Guyss!</h2>
+                <h2 id="hello" class="text-center items-center w-max h-max text-6xl">Hello, Guyss!</h2>
                 <h3 id="my-name" class="text-center items-center w-max h-max text-[2.5rem] mt-2"></h3>
-                <p>i have experince in software development more than 3 years with spring framework</p>
+                <p>I have experince in software development more than 3 years with spring framework.</p>
                 <button class="max-w-max p-2 mt-5 border-solid border-[1px] border-slate-100 rounded-md hover:text-slate-800 hover:bg-slate-100">Download My CV</button>
                 <div class="social-media flex justify-start mt-3">
                     <a href="#" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48"><path fill="#f55376" d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20 c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20 C42.014,38.383,38.417,41.986,34.017,41.99z"></path><path fill="#fac8d5" d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5 s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z"></path><circle cx="31.5" cy="16.5" r="1.5" fill="#fac8d5"></circle><path fill="#fac8d5" d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12 C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18 z"></path></svg></a>
@@ -81,9 +91,9 @@
     </div>
 
     <!-- Experinece -->
-    <div class="experience h-[100vh] bg-[#1B1A55]">
-        <div class="card">
-            <h1>title</h1>
+    <div class="experience h-[100vh] bg-[#1B1A55] flex justify-center">
+        <div class="card border-solid border-2 border-slate-100 w-3/4">
+            <h1 class="text-slate-100">Experience</h1>
 
         </div>
     </div>
