--- a/public/html/index.html
+++ b/public/html/index.html
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
+            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
                 <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
                 <div class="p-2">
                     <h1 class="text-2xl font-bold">Web Chat</h1>
@@ -221,7 +221,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
+            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
                 <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
                 <div class="p-2">
                     <h1 class="text-2xl font-bold">Contact Management System</h1>
@@ -260,8 +260,31 @@
         </div>
     </div>
     <!-- Contact -->
-    <div class="contact h-[100vh] bg-teal-700">
-        <h1 class="text-9xl text-slate-100">Concacts</h1>
+    <div class="contact h-max bg-teal-700 flex items-center justify-evenly p-5">
+        <a href="#">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+                <img src="../img/github-icon-2.svg" alt="git" class="h-12 w-12 mr-3">
+                <p class="text-slate-700 font-semibold text-sm">Github</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+                <img src="../img/facebook-3-2.svg" alt="git" class="h-12 w-12 mr-3">
+                <p class="text-slate-700 font-semibold text-sm">Facebook</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+                <img src="../img/instagram-2016-6.svg" alt="git" class="h-12 w-12 mr-3">
+                <p class="text-slate-700 font-semibold text-sm">Instagram</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+                <img src="../img/linkedin-icon.svg" alt="git" class="h-12 w-12 mr-3">
+                <p class="text-slate-700 font-semibold text-sm">Linkdline</p>
+            </div>
+        </a>
     </div>
     <!-- Footer -->
 </body>
