--- a/public/html/index.html
+++ b/public/html/index.html
@@ -156,87 +156,96 @@
         <h1 id="projects" class="text-center text-slate-100 text-4xl underline mb-7" data-aos="fade-up" data-aos-duration="500">Projects</h1>
         
         <div class="flex flex-wrap justify-around">
-            <div class="bg-[#535C91] h-max w-[25rem] flex shadow-md flex-col rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
-                <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
-                <div class="p-2">
-                    <h1 class="text-2xl font-bold">Book-Api</h1>
-                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
-                    <div class="tag mt-2">
-                        <span class="tag-style">#Java</span>
-                        <span class="tag-style">#Typescript</span>
-                        <span class="tag-style">#Spring Framework</span>
-                        <span class="tag-style">#SrpingBoot</span>
-                        <span class="tag-style">#Postgresql</span>
-                        <span class="tag-style">#Docker</span>
+            <a href="">
+                <div class="bg-[#535C91] h-max w-[25rem] flex shadow-md flex-col rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
+                    <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
+                    <div class="p-2">
+                        <h1 class="text-2xl font-bold">Book-Api</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
+                        <div class="tag mt-2">
+                            <span class="tag-style">#Java</span>
+                            <span class="tag-style">#Typescript</span>
+                            <span class="tag-style">#Spring Framework</span>
+                            <span class="tag-style">#SrpingBoot</span>
+                            <span class="tag-style">#Postgresql</span>
+                            <span class="tag-style">#Docker</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
-                <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
-                <div class="p-2">
-                    <h1 class="text-2xl font-bold">DFS System</h1>
-                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
-                    <div class="tag mt-2">
-                        <span class="tag-style">#Java</span>
-                        <span class="tag-style">#Spring Framework</span>
-                        <span class="tag-style">#SrpingBoot</span>
-                        <span class="tag-style">#Postgresql</span>
-                        <span class="tag-style">#Docker</span>
-                        <span class="tag-style">#Elasticsearch</span>
-                        <span class="tag-style">#Redis</span>
+            </a>
+            <a href="">
+                <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
+                    <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
+                    <div class="p-2">
+                        <h1 class="text-2xl font-bold">DFS System</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
+                        <div class="tag mt-2">
+                            <span class="tag-style">#Java</span>
+                            <span class="tag-style">#Spring Framework</span>
+                            <span class="tag-style">#SrpingBoot</span>
+                            <span class="tag-style">#Postgresql</span>
+                            <span class="tag-style">#Docker</span>
+                            <span class="tag-style">#Elasticsearch</span>
+                            <span class="tag-style">#Redis</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-right" data-aos-duration="500">
-                <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
-                <div class="p-2">
-                    <h1 class="text-2xl font-bold">Palarel Programming</h1>
-                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
-                    <div class="tag mt-2">
-                        <span class="tag-style">#Java</span>
-                        <span class="tag-style">#Spring Framework</span>
-                        <span class="tag-style">#SrpingBoot</span>
-                        <span class="tag-style">#Postgresql</span>
-                        <span class="tag-style">#Docker</span>
-                        <span class="tag-style">#Elasticsearch</span>
-                        <span class="tag-style">#Redis</span>
+            </a>
+            <a href="">
+                <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-right" data-aos-duration="500">
+                    <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
+                    <div class="p-2">
+                        <h1 class="text-2xl font-bold">Palarel Programming</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
+                        <div class="tag mt-2">
+                            <span class="tag-style">#Java</span>
+                            <span class="tag-style">#Spring Framework</span>
+                            <span class="tag-style">#SrpingBoot</span>
+                            <span class="tag-style">#Postgresql</span>
+                            <span class="tag-style">#Docker</span>
+                            <span class="tag-style">#Elasticsearch</span>
+                            <span class="tag-style">#Redis</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
-                <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
-                <div class="p-2">
-                    <h1 class="text-2xl font-bold">Web Chat</h1>
-                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
-                    <div class="tag mt-2">
-                        <span class="tag-style">#Java</span>
-                        <span class="tag-style">#Spring Framework</span>
-                        <span class="tag-style">#SrpingBoot</span>
-                        <span class="tag-style">#Postgresql</span>
-                        <span class="tag-style">#Docker</span>
-                        <span class="tag-style">#Elasticsearch</span>
-                        <span class="tag-style">#Kafka</span>
-                        <span class="tag-style">#Redis</span>
+            </a>
+            <a href="">
+                <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-left" data-aos-duration="500">
+                    <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
+                    <div class="p-2">
+                        <h1 class="text-2xl font-bold">Web Chat</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
+                        <div class="tag mt-2">
+                            <span class="tag-style">#Java</span>
+                            <span class="tag-style">#Spring Framework</span>
+                            <span class="tag-style">#SrpingBoot</span>
+                            <span class="tag-style">#Postgresql</span>
+                            <span class="tag-style">#Docker</span>
+                            <span class="tag-style">#Elasticsearch</span>
+                            <span class="tag-style">#Kafka</span>
+                            <span class="tag-style">#Redis</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
-                <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
-                <div class="p-2">
-                    <h1 class="text-2xl font-bold">Contact Management System</h1>
-                    <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
-                    <div class="tag mt-2">
-                        <span class="tag-style">#Java</span>
-                        <span class="tag-style">#Spring Framework</span>
-                        <span class="tag-style">#SrpingBoot</span>
-                        <span class="tag-style">#Postgresql</span>
-                        <span class="tag-style">#Docker</span>
-                        <span class="tag-style">#Elasticsearch</span>
-                        <span class="tag-style">#Redis</span>
+            </a>
+            <a href="">
+                <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-up" data-aos-duration="500">
+                    <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
+                    <div class="p-2">
+                        <h1 class="text-2xl font-bold">Contact Management System</h1>
+                        <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perferendis delectus ad? Architecto error itaque enim blanditiis officiis deserunt temporibus!</p>
+                        <div class="tag mt-2">
+                            <span class="tag-style">#Java</span>
+                            <span class="tag-style">#Spring Framework</span>
+                            <span class="tag-style">#SrpingBoot</span>
+                            <span class="tag-style">#Postgresql</span>
+                            <span class="tag-style">#Docker</span>
+                            <span class="tag-style">#Elasticsearch</span>
+                            <span class="tag-style">#Redis</span>
+                        </div>
                     </div>
-                </div>
-            </div>
+               </div>
+            </a>
             <a href="">
                 <div class="bg-[#535C91] h-max w-[25rem] flex flex-col shadow-md rounded-md mb-3 p-2 text-slate-300" data-aos="fade-right" data-aos-duration="500">
                     <img src="../img/naila.jpeg" alt="" class="h-[14rem] w-[14] object-cover rounded-sm">
@@ -260,31 +269,32 @@
         </div>
     </div>
     <!-- Contact -->
-    <div class="contact h-max bg-teal-700 flex items-center justify-evenly p-5">
+    <div class="contact h-[30vh] bg-teal-700 flex items-center justify-evenly p-5 absolute w-[100%]">
         <a href="#">
-            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center" data-aos="fade-left">
                 <img src="../img/github-icon-2.svg" alt="git" class="h-12 w-12 mr-3">
                 <p class="text-slate-700 font-semibold text-sm">Github</p>
             </div>
         </a>
         <a href="#">
-            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center" data-aos="fade-left">
                 <img src="../img/facebook-3-2.svg" alt="git" class="h-12 w-12 mr-3">
                 <p class="text-slate-700 font-semibold text-sm">Facebook</p>
             </div>
         </a>
         <a href="#">
-            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center" data-aos="fade-right">
                 <img src="../img/instagram-2016-6.svg" alt="git" class="h-12 w-12 mr-3">
                 <p class="text-slate-700 font-semibold text-sm">Instagram</p>
             </div>
         </a>
         <a href="#">
-            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center">
+            <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center" data-aos="fade-right">
                 <img src="../img/linkedin-icon.svg" alt="git" class="h-12 w-12 mr-3">
                 <p class="text-slate-700 font-semibold text-sm">Linkdline</p>
             </div>
         </a>
+        <h1 class="absolute text-center bottom-0 z-0 text-slate-300">&copy;Copyright 2024</h1>
     </div>
     <!-- Footer -->
 </body>
