add add copyright

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -269,7 +269,8 @@
         </div>
     </div>
     <!-- Contact -->
-    <div class="contact h-[30vh] bg-teal-700 flex items-center justify-evenly p-5 absolute w-[100%]">
+    
+    <div class="contact h-[30vh] bg-[#1F2544] flex items-center justify-evenly p-5 absolute w-[100%]">
         <a href="#">
             <div class="contact-1 flex flex-row bg-slate-300 p-3 rounded-md w-max items-center" data-aos="fade-left">
                 <img src="../img/github-icon-2.svg" alt="git" class="h-12 w-12 mr-3">
