add add change experience to skills

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -28,7 +28,7 @@
             font-weight: 600;
             font-style: normal;
         }
-        #text-experience {
+        #text-skils {
             font-family: "Shantell Sans", cursive;
             font-optical-sizing: auto;
             font-weight: 400;
@@ -46,7 +46,7 @@
         <ul class="text-slate-100 flex justify-around w-[30%]">
             <li class="hover-animation"><a href="">Home</a></li>
             <li class="hover-animation"><a href="#about-me">About</a></li>
-            <li class="hover-animation"><a href="#experience">Experience</a></li>
+            <li class="hover-animation"><a href="#skils">Skils</a></li>
             <li class="hover-animation"><a href="#projects">Projects</a></li>
             <li class="hover-animation"><a href="">Contact</a></li>
         </ul>
@@ -103,9 +103,9 @@
         </div>
     </div>
 
-    <!-- Experience -->
-    <div class="experience h-max bg-gradient-to-bl from-[#050a53] to-[#070F2B] py-5 flex flex-col items-center">
-        <h1 id="text-experience" class="text-slate-100 text-4xl text-center underline" data-aos="fade-up" data-aos-duration="500">Experiences</h1>
+    <!-- Skils -->
+    <div id="skils" class="skils h-max bg-gradient-to-bl from-[#050a53] to-[#070F2B] py-5 flex flex-col items-center">
+        <h1 id="text-skils" class="text-slate-100 text-4xl text-center underline" data-aos="fade-up" data-aos-duration="500">Skils</h1>
         
         <div class="w-full flex items-center text-4xl justify-evenly">
             <img src="../img/java-14.svg" alt="java" class="w-1/4 h-1/4" data-aos="fade-left">
